--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/highmountaintea/crazy-fibonacci/issues"
   },
-  "homepage": "https://github.com/highmountaintea/crazy-fibonacci#readme"
+  "homepage": "https://github.com/highmountaintea/crazy-fibonacci#readme",
+  "dependencies": {
+    "bluebird": "^3.5.1",
+    "express": "^4.16.3"
+  }
 }
